--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
 
   	.more-info-sections{
   		flex-direction: column;
+		padding:20px;
 
   	}
 
@@ -163,6 +164,9 @@
 
   		border-right:none;
   		width: 100%;
+		aign-self:center;
+		height:100%;
+		
 
   		text-transform: lowercase;
 
@@ -173,6 +177,15 @@
    	font-weight: bold;
    	text-align: center;
    }
+	  
+	 footer{
+		 
+		 font-weight:bolder;
+		 font-size:16px;
+		 
+		 
+		 
+	  }
 
 	
    .img-section{
