--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
   	.more-info-sections{
   		flex-direction: column;
 		padding:20px;
+		height:100%;
 
   	}
 
@@ -166,6 +167,7 @@
   		width: 100%;
 		aign-self:center;
 		height:100%;
+		padding:20px;
 		
 
   		text-transform: lowercase;
@@ -220,6 +222,8 @@ background-size: 100% ;
   	align-items:center;
   	text-align: center;
   }
+	
+	
 
 
 
