--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
   	.more-info-sections{
   		flex-direction: column;
 		padding:20px;
+		height:100%;
 		
 
   	}
@@ -182,8 +183,8 @@
 	  
 	 footer{
 		 
-		 font-weight:bolder;
-		 font-size:16px;
+		 font-weight:bold;
+		 font-size:12px;
 		 
 		 
 		 
