--- a/index.html
+++ b/index.html
@@ -175,9 +175,10 @@
 
   	}
    .info-section{
-   	/*letter-spacing: none;*/
+   	letter-spacing: 0.8em;
    	font-size:1rem;
-   	font-weight: bold;
+	   font-weight:bold;
+   	
    	text-align: center;
 	  width:100%;
    }
