--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 		justify-content: center;
 		/*color:red;*/
 		align-items: center;
-		background:#45872FFF;
+		background:#45872FFF green;
 		color:#000;
 		letter-spacing: 1.2em;
 	}
@@ -115,7 +115,7 @@
 		text-align: center;
 		font-size: 28px;
 		letter-spacing: 1.2em;
-		color:#45872FFF;
+		color:#45872FFF green;
 
 	}
 
@@ -124,7 +124,7 @@
 		display: flex;
 		padding:0 20px;
 		border-top:3px solid #45872FFF;
-		border-bottom: 3px solid #45872FFF;
+		border-bottom: 3px solid #45872FFF green;
 
 		margin-left: 3px;
 		justify-content: center;
@@ -135,7 +135,7 @@
   	text-align: center;
   	text-transform: uppercase;
   	margin:3px;
-  	border-right:2px solid #45872FFF;
+  	border-right:2px solid #45872FFF green;
   }
 
   .more-info-sections .special-case{
