--- a/index.html
+++ b/index.html
@@ -188,9 +188,10 @@
    .info-section{
    	/*letter-spacing: none;*/
    	font-size:1rem;
-   	font-weight: bold;
+   	font-weight:normal;
    	text-align: center;
-   	letter-spacing: 0.8em;
+   	letter-spacing: 0.2em;
+	  width:100%;
    }
 
 	
