--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta content="width=device-width, initial-scale=1" name="viewport" />
-	<title>masks off</title>
+	<title>ndunyu.com</title>
 </head>
 <body>
 
@@ -49,7 +49,7 @@
 
 		<footer>
 			<div>
-				for more info contact visit us at www.ndunyu.co.ke.staysafe
+				order your masks now
 			</div>
 		</footer>
 		
